# weather

./: .gitignore  CMakeLists.txt  HunterGate.cmake  LICENSE  README.md  build-ios.sh
Source/weather/: DelegateBase.cpp  DelegateBase.hpp  sugar.cmake
Source/weather/ui/: sugar.cmake
Source/weather/ui/cli/: Delegate.cpp  Delegate.hpp  main.cpp  sugar.cmake
Source/weather/ui/icons/: sugar.cmake
Source/weather/ui/icons/about/: sugar.cmake
Source/weather/ui/icons/app/: sugar.cmake
Source/weather/ui/icons/openweathermap/: sugar.cmake
Source/weather/ui/icons/settings/: sugar.cmake
Source/weather/ui/icons/spotlight/: sugar.cmake
Source/weather/ui/images/: sugar.cmake
Source/weather/ui/images/iphone/: sugar.cmake
Source/weather/ui/ios/: Annotation.hpp  Annotation.mm  CMakeLists.txt  EngineWrapper.hpp  EngineWrapper.mm  Progress.hpp  Progress.mm  SearchBar.hpp  SearchBar.mm  WeatherTabDelegate.fpp  WeatherTabDelegate.hpp  WeatherTabDelegate.mm  main.mm  sugar.cmake
Source/weather/ui/ios/icons/: sugar.cmake
Source/weather/ui/ios/icons/app/: sugar.cmake
Source/weather/ui/ios/icons/settings/: sugar.cmake
Source/weather/ui/ios/icons/spotlight/: sugar.cmake
Source/weather/ui/ios/iphone/: AboutTab.mm  WeatherTab.h  WeatherTab.mm  sugar.cmake
Source/weather/ui/ios/launch_images/ipad/: sugar.cmake
Source/weather/ui/ios/launch_images/iphone/: sugar.cmake
Source/weather/ui/ios/resources/: plist.in  sugar.cmake
Source/weather/ui/ios/views/: About.h  About.mm  About.storyboard  Weather.hpp  Weather.mm  Weather.storyboard  iPad.hpp  iPad.mm  iPad.storyboard  iPhone.hpp  iPhone.mm  iPhone.storyboard  plist.in  sugar.cmake
cmake/Hunter/: config.cmake
sources/: Exception.hpp  Json.cpp  Json.hpp  Network.fpp  Result.cpp  Result.hpp  Weather.cpp  Weather.hpp  sugar.cmake
sources/ui/: sugar.cmake
sources/ui/cli/: main.cpp  sugar.cmake
sources/ui/icons/: sugar.cmake
sources/ui/icons/about/: sugar.cmake
sources/ui/icons/openweathermap/: sugar.cmake
sources/ui/ios/: CMakeLists.txt  sugar.cmake
sources/ui/ios/iphone/: WeatherTab.h  WeatherTab.mm  sugar.cmake
sources/ui/ios/resources/: MainStoryboard_iPad.storyboard  MainStoryboard_iPhone.storyboard  plist.in  sugar.cmake
sources/unittest/: sugar.cmake  test.cpp
